linux (3.12.6-3) UNRELEASED; urgency=low

  [ Ben Hutchings ]
  * [hppa] Update configuration, thanks to Helge Deller (Closes: #733895)
    - Change AGP, AGP_PARISC from modules to built-in, to work around
      race condition between DRM and AGP
    - Enable DEBUG_STACKOVERFLOW
    - udeb: Build packages for the parisc64-smp flavour instead of the
      removed parisc flavour (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Jan 2014 01:26:59 +0000

linux (3.12.6-2) unstable; urgency=medium

  [ Bastian Blank ]
  * [x86] Make MICROCODE built-in for early microcode loading.

  [ Ben Hutchings ]
  * [armhf] linux-headers: Fix typo in compiler dependency

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 29 Dec 2013 16:56:20 +0100

linux (3.12.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.12.4
    - net: x86: bpf: don't forget to free sk_filter (v2)
    - net: Fix "ip rule delete table 256" (Closes: #724783)
    - net-tcp: fix panic in tcp_fastopen_cache_set()
    - inet: prevent leakage of uninitialized memory to user in recv syscalls
      (CVE-2013-6405)
    - ping: prevent NULL pointer dereference on write to msg_name
      (CVE-2013-6432)
    - ipv6: fix leaking uninitialized port number of offender sockaddr
    - netfilter: push reasm skb through instead of original frag skbs
    - packet: fix use after free race in send path when dev is released
    - gso: handle new frag_list of frags GRO packets
    - net: update consumers of MSG_MORE to recognize MSG_SENDPAGE_NOTLAST
    - xfs: add capability check to free eofblocks ioctl
    - iommu/vt-d: Fixed interaction of VFIO_IOMMU_MAP_DMA with IOMMU address
      limits
    - aio: Fix a trinity splat
    - aio: prevent double free in ioctx_alloc
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.12.5
    - [s390,s390x] crypto: Fix aes-xts parameter corruption