@@ -471,7 +471,6 @@ sub image_magic {
 ######################################################################
 
 sub do_modules {
-  print STDERR "Running depmod.\n";
   my $ret = system("depmod -a -F $realimageloc/System.map-$version $version");
   my $exit_value  = $? >> 8;
   my $signal_num  = $? & 127;
@@ -585,16 +584,14 @@ if ($postinst_hook) {
 }
 
 if (-d "/etc/kernel/postinst.d") {
-  print STDERR "Examining /etc/kernel/postinst.d.\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version " .
+  system ("run-parts --report --exit-on-error --arg=$version " .
           "--arg=$realimageloc$kimage-$version " .
           "/etc/kernel/postinst.d") &&
             die "Failed to process /etc/kernel/postinst.d";
 }
 
 if (-d "/etc/kernel/postinst.d/$version") {
-  print STDERR "Examining /etc/kernel/postinst.d/$version.\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version " .
+  system ("run-parts --report --exit-on-error --arg=$version " .
           "--arg=$realimageloc$kimage-$version " .
           "/etc/kernel/postinst.d/$version") &&
             die "Failed to process /etc/kernel/postinst.d/$version";
