@@ -143,14 +143,12 @@ if (-x "$prerm_hook") {
   &run_hook("prerm", $prerm_hook);
 }
 if (-d "/etc/kernel/prerm.d") {
-  print STDERR "Examining /etc/kernel/prerm.d.\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version " . 
+  system ("run-parts --report --exit-on-error --arg=$version " . 
           "--arg=$realimageloc$kimage-$version /etc/kernel/prerm.d") &&
             die "Failed to process /etc/kernel/prerm.d";
 }
 if (-d "/etc/kernel/prerm.d/$version") {
-  print STDERR "Examining /etc/kernel/prerm.d/$version.\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version" .
+  system ("run-parts --report --exit-on-error --arg=$version" .
           " --arg=$realimageloc$kimage-$version " .
           "/etc/kernel/prerm.d/$version") &&
             die "Failed to process /etc/kernel/prerm.d/$version";
